# Asset-Inventory-Claude

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: index.py
data/: sample_data.json
src/ot_asset_inventory/: __init__.py  __main__.py  config.py  server.py
src/ot_asset_inventory/db/: __init__.py  connection.py  schema.py  seed.py
src/ot_asset_inventory/models/: __init__.py  asset.py  environment.py  relationship.py
src/ot_asset_inventory/tools/: __init__.py  analysis.py  assets.py  compliance.py  environment.py  relationships.py  review.py
src/ot_asset_inventory/utils/: __init__.py  graph.py
tests/: __init__.py  test_basic.py
